cicd/mypython-kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mypython3
  labels:
    xxx: xxxxxasd
    app: mypython3
