cicd/mypython-kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mypython3-service
  labels:
    app: mypython3

spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5000
      # externalIP: 192.168.88.1
  selector:
    app: mypython3
  type: ClusterIP
