cicd/mypython-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypython3-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mypython3-def.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mypython3-service
                port:
                  number: 443
  ingressClassName: nginx
